--- a/server.conf
+++ b/server.conf
@@ -3,7 +3,7 @@ server.ip = "0.0.0.0"
 server.port = 4567
 
 # Socks5 proxy
-server.socksProxyEnabled = true
+server.socksProxyEnabled = ${PROXY_ENABLED}
 server.socksProxyHost = ${PROXY_HOST}
 server.socksProxyPort = ${PROXY_PORT}
 
