--- a/server.conf
+++ b/server.conf
@@ -3,9 +3,9 @@ server.ip = "0.0.0.0"
 server.port = 4567
 
 # Socks5 proxy
-server.socksProxyEnabled = false
-server.socksProxyHost = ""
-server.socksProxyPort = ""
+server.socksProxyEnabled = ${PROXY_ENABLED}
+server.socksProxyHost = ${PROXY_HOST}
+server.socksProxyPort = ${PROXY_PORT}
 
 # webUI
 server.webUIEnabled = true
