Some small changes on backup strategy

--- a/server.conf
+++ b/server.conf
@@ -15,9 +15,9 @@ server.webUIInterface = "browser"
 server.electronPath = ""
 
 # Authentication
-server.basicAuthEnabled = false
-server.basicAuthUsername = ""
-server.basicAuthPassword = ""
+server.basicAuthEnabled = ${AUTH_ENABLED}
+server.basicAuthUsername = ${AUTH_USER}
+server.basicAuthPassword = ${AUTH_PASS}
 
 # misc
 server.debugLogsEnabled = false
