Organize all scripts into one

--- a/server.conf
+++ b/server.conf
@@ -3,9 +3,9 @@ server.ip = "0.0.0.0"
 server.port = 4567
 
 # Socks5 proxy
-server.socksProxyEnabled = ${PROXY_ENABLED}
-server.socksProxyHost = ${PROXY_HOST}
-server.socksProxyPort = ${PROXY_PORT}
+server.socksProxyEnabled = false
+server.socksProxyHost = ""
+server.socksProxyPort = ""
 
 # webUI
 server.webUIEnabled = true
@@ -15,11 +15,11 @@ server.webUIInterface = "browser"
 server.electronPath = ""
 
 # Authentication
-server.basicAuthEnabled = ${AUTH_ENABLED}
+server.basicAuthEnabled = true
 server.basicAuthUsername = ${AUTH_USER}
 server.basicAuthPassword = ${AUTH_PASS}
 
 # misc
 server.debugLogsEnabled = false
 server.systemTrayEnabled = false
-server.downloadsPath = "/tmp/tachidesk"
+server.downloadsPath = ${DOWNLOADS_PATH}
