Try to fix port forward issue

--- a/server.conf
+++ b/server.conf
@@ -1,6 +1,6 @@
 # Server ip and port bindings
 server.ip = "0.0.0.0"
-server.port = 4567
+server.port = ${PORT}
 
 # Socks5 proxy
 server.socksProxyEnabled = false
